force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ConsumesCredit__c.field-meta.xml
<CustomField>
    <fullName>ConsumesCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumes Credit</label>
    <type>Checkbox</type>
</CustomField>