force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CreditDistribution__c.field-meta.xml
<CustomField>
    <fullName>CreditDistribution__c</fullName>
    <description>Determines how the total usage is distributed among the usage periods.</description>
    <inlineHelpText>Determines how the total usage is distributed among the usage periods.</inlineHelpText>
    <label>Credit Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditDistribution</valueSetName>
    </valueSet>
</CustomField>