force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CreditDistributionAmend__c.field-meta.xml
<CustomField>
    <fullName>CreditDistributionAmend__c</fullName>
    <description>Determines how the total usage is distributed among the usage periods upon amendment.</description>
    <inlineHelpText>Determines how the total usage is distributed among the usage periods upon amendment.</inlineHelpText>
    <label>Credit Distribution on Amend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditDistributionAmend</valueSetName>
    </valueSet>
</CustomField>