force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OverageSurcharge__c.field-meta.xml
<CustomField>
    <fullName>OverageSurcharge__c</fullName>
    <label>Overage Surcharge</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>