force-app/main/default/objects/SBQQ__QuoteLine__c/fields/UsageTerm__c.field-meta.xml
<CustomField>
    <fullName>UsageTerm__c</fullName>
    <label>Usage Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>